--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,30 +3,31 @@
 # This software is licensed under the Apache License version 2.
 #
 [versions]
-junit = "5.8.1"
-protoc = "3.17.3"
-substrait = "0.9.0"
-jackson = "2.14.1"
-guava = "29.0-jre"
-lombok = "1.18.20"
+junit = "5.10.0"
+protoc = "3.24.1"
+substrait = "0.11.0" # 0.12.0 breaks build
+jackson = "2.15.2"
+guava = "32.1.2-jre"
+lombok = "1.18.28"
 slf4j = "2.0.7"
 log4j = "2.20.0"
 jetty = "9.4.51.v20230217"
-jersey = "2.39.1"
+jersey = "2.40"
 mockito = "3.12.4"
-airlift-units = "1.8"
-airlift-log = "231"
-hive2 = "2.3.9"
-hadoop2 = "2.7.3"
+airlift-units = "1.10"
+airlift-log = "235"
+hive2 = "2.3.9" # 3.0.0 version breaks build
+hadoop2 = "2.10.2"
 httpclient5 = "5.2.1"
-mockserver = "5.13.2"
-commons-lang3 = "3.12.0"
-commons-io = "2.11.0"
+mockserver = "5.15.0"
+commons-lang3 = "3.13.0"
+commons-io = "2.13.0"
+commons-net = "3.9.0"
 caffeine = "2.9.3"
-rocksdbjni = "7.7.3"
+rocksdbjni = "7.10.2"
 
-protobuf-plugin = "0.9.2"
-spotless-plugin = '6.11.0'
+protobuf-plugin = "0.9.4"
+spotless-plugin = '6.13.0' # last version for Java 8
 gradle-extensions-plugin = '1.74'
 publish-plugin = '1.1.0'
 rat-plugin = '0.8.0'
@@ -50,7 +51,6 @@ slf4j-jdk14 = { group = "org.slf4j", name = "slf4j-jdk14", version = "1.7.30" }
 log4j-slf4j2-impl = { group = "org.apache.logging.log4j", name = "log4j-slf4j2-impl", version.ref = "log4j" }
 log4j-api = { group = "org.apache.logging.log4j", name = "log4j-api", version.ref = "log4j" }
 log4j-core = { group = "org.apache.logging.log4j", name = "log4j-core", version.ref = "log4j" }
-log4j-12-api = { group = "org.apache.logging.log4j", name = "log4j-1.2-api", version.ref = "log4j" }
 jetty-server = { group = "org.eclipse.jetty", name = "jetty-server", version.ref = "jetty" }
 jetty-servlet = { group = "org.eclipse.jetty", name = "jetty-servlet", version.ref = "jetty" }
 jersey-server = { group = "org.glassfish.jersey.core", name = "jersey-server", version.ref = "jersey" }
@@ -76,7 +76,7 @@ caffeine = { group = "com.github.ben-manes.caffeine", name = "caffeine", version
 rocksdbjni = { group = "org.rocksdb", name = "rocksdbjni", version.ref = "rocksdbjni" }
 
 [bundles]
-log4j = ["slf4j-api", "log4j-slf4j2-impl", "log4j-api", "log4j-core", "log4j-12-api"]
+log4j = ["slf4j-api", "log4j-slf4j2-impl", "log4j-api", "log4j-core"]
 jetty = ["jetty-server", "jetty-servlet"]
 jersey = ["jersey-server", "jersey-container-servlet-core", "jersey-container-jetty-http", "jersey-media-json-jackson", "jersey-hk2"]
 
